--- a/api/event/models/event.settings.json
+++ b/api/event/models/event.settings.json
@@ -38,6 +38,11 @@
       "type": "component",
       "repeatable": true,
       "component": "bunky.cell-info"
+    },
+    "position": {
+      "type": "component",
+      "repeatable": false,
+      "component": "poloha.gps"
     }
   }
 }
