--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "strapi-plugin-i18n": "3.6.5",
     "strapi-connector-bookshelf": "3.6.5",
     "knex": "0.21.18",
+    "redis": "4.0.6",
     "pg": "8.5.1"
   },
   "author": {
