--- a/api/event/models/event.settings.json
+++ b/api/event/models/event.settings.json
@@ -43,6 +43,9 @@
       "type": "component",
       "repeatable": false,
       "component": "poloha.gps"
+    },
+    "device": {
+      "model": "device"
     }
   }
 }
