--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "strapi-connector-bookshelf": "3.6.5",
     "knex": "0.21.18",
     "redis": "4.0.6",
-    "pg": "8.5.1"
+    "pg": "8.5.1",
+    "moment": "2.29.4"
   },
   "author": {
     "name": "A Strapi developer"
